# hueniversity_py

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: test_hueniversity_py.py
